--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: false
 contact_links:
   - name: 🛡️ Security Vulnerability
-    url: mailto:security@rtnw.app
+    url: https://github.com/aeropher/rtnwapp/security/advisories/new
     about: Please report security vulnerabilities privately
   - name: 💬 Discussions
     url: https://github.com/aeropher/rtnwapp/discussions
